packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_11.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 297
expression: output
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/unisynth';
import {foo, bar as bbar} from "../state";
import * as dep2 from "dep2";
import dep3 from "dep3/something";

export const Header = component$(() => {
    return (
        <Header onClick={$((ev) => dep3(ev))}>
            {dep2.stuff()}{bbar()}
        </Header>
    );
});

export const App = component$(() => {
    return (
        <Header>{foo()}</Header>
    );
});

============================= project/test.tsx_Header_component_Header_onClick_KjD9TCNkNxY.tsx ==

import dep3 from "dep3/something";
export const Header_component_Header_onClick_KjD9TCNkNxY = (ev)=>dep3(ev);
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/project/test.tsx\"],\"names\":[],\"mappings\":\";2DAQ2B,CAAC,KAAO,KAAK\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_Header_onClick_KjD9TCNkNxY",
  "entry": "entry_segments",
  "displayName": "test.tsx_Header_component_Header_onClick",
  "hash": "KjD9TCNkNxY",
  "canonicalFilename": "test.tsx_Header_component_Header_onClick_KjD9TCNkNxY",
  "path": "project",
  "extension": "tsx",
  "parent": "Header_component_UVBJuFYfvDo",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    242,
    258
  ]
}
*/
============================= project/test.tsx_Header_component_UVBJuFYfvDo.tsx ==

import { Header } from "./test";
import { bar as bbar } from "../state";
import * as dep2 from "dep2";
import { qrl } from "@khulnasoft.com/unisynth";
export const Header_component_UVBJuFYfvDo = ()=>{
    return <Header onClick={/*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_Header_onClick_KjD9TCNkNxY"), "Header_component_Header_onClick_KjD9TCNkNxY")}>
            {dep2.stuff()}{bbar()}
        </Header>;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;;;4CAMiC;IAC7B,QACK,OAAO,iJAA8B;YAClC,CAAC,KAAK,KAAK,IAAI,OAAO;QAC1B,EAAE;AAEV\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_UVBJuFYfvDo",
  "entry": "entry_segments",
  "displayName": "test.tsx_Header_component",
  "hash": "UVBJuFYfvDo",
  "canonicalFilename": "test.tsx_Header_component_UVBJuFYfvDo",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    194,
    323
  ]
}
*/
============================= project/test.tsx_App_component_wGkRHWXaqjs.tsx ==

import { Header } from "./test";
import { foo } from "../state";
export const App_component_wGkRHWXaqjs = ()=>{
    return <Header>{foo()}</Header>;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;yCAc8B;IAC1B,QACK,QAAQ,QAAQ;AAEzB\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "App_component_wGkRHWXaqjs",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "wGkRHWXaqjs",
  "canonicalFilename": "test.tsx_App_component_wGkRHWXaqjs",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    357,
    419
  ]
}
*/
============================= project/test.tsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_UVBJuFYfvDo"), "Header_component_UVBJuFYfvDo"));
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_wGkRHWXaqjs"), "App_component_wGkRHWXaqjs"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;AAMA,OAAO,MAAM,uBAAS,uHAMnB;AAEH,OAAO,MAAM,oBAAM,iHAIhB\"}")
== DIAGNOSTICS ==

[]
