packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_3.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 128
expression: output
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/unisynth';
export const App = () => {
    const Header = component$(() => {
        console.log("mount");
        return (
            <div onClick={$((ctx) => console.log(ctx))}/>
        );
    });
    return Header;
});

============================= test.tsx_App_Header_component_B9F3YeqcO1w.tsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/unisynth";
export const App_Header_component_B9F3YeqcO1w = ()=>{
    console.log("mount");
    return <div onClick={/*#__PURE__*/ qrl(()=>import("./test.tsx_App_Header_component_div_onClick_aO7uI7Iw6oQ"), "App_Header_component_div_onClick_aO7uI7Iw6oQ")}/>;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";gDAG8B;IACtB,QAAQ,GAAG,CAAC;IACZ,QACK,IAAI;AAEb\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_B9F3YeqcO1w",
  "entry": null,
  "displayName": "test.tsx_App_Header_component",
  "hash": "B9F3YeqcO1w",
  "canonicalFilename": "test.tsx_App_Header_component_B9F3YeqcO1w",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    109,
    238
  ]
}
*/
============================= test.tsx_App_Header_component_div_onClick_aO7uI7Iw6oQ.tsx (ENTRY POINT)==

export const App_Header_component_div_onClick_aO7uI7Iw6oQ = (ctx)=>console.log(ctx);
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"4DAM4B,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_div_onClick_aO7uI7Iw6oQ",
  "entry": null,
  "displayName": "test.tsx_App_Header_component_div_onClick",
  "hash": "aO7uI7Iw6oQ",
  "canonicalFilename": "test.tsx_App_Header_component_div_onClick_aO7uI7Iw6oQ",
  "path": "",
  "extension": "tsx",
  "parent": "App_Header_component_B9F3YeqcO1w",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    192,
    217
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const App = ()=>{
    const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_Header_component_B9F3YeqcO1w"), "App_Header_component_B9F3YeqcO1w"));
    return Header;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEA,OAAO,MAAM,MAAM;IACf,MAAM,uBAAS;IAMf,OAAO;AACX,EAAG\"}")
== DIAGNOSTICS ==

[]
