packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_8.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 223
expression: output
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/unisynth';

export const Header = component$(() => {
    return $((hola) => {
        const hola = this;
        const {something, styff} = hola;
        const hello = hola.nothere.stuff[global];
        return (
            <Header/>
        );
    });
});

============================= test.tsx_Header_component_J4uyIhaBNR4.tsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/unisynth";
export const Header_component_J4uyIhaBNR4 = ()=>{
    return /*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_1_2B8d0oH9ZWc"), "Header_component_1_2B8d0oH9ZWc");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";4CAGiC;IAC7B;AAQJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_component_J4uyIhaBNR4",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "J4uyIhaBNR4",
  "canonicalFilename": "test.tsx_Header_component_J4uyIhaBNR4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    296
  ]
}
*/
============================= test.tsx_Header_component_1_2B8d0oH9ZWc.tsx (ENTRY POINT)==

import { Header } from "./test";
export const Header_component_1_2B8d0oH9ZWc = (hola)=>{
    const hola = this;
    const { something, styff } = hola;
    hola.nothere.stuff[global];
    return <Header/>;
};
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";8CAIa,CAAC;IACN,MAAM,OAAO,IAAI;IACjB,MAAM,EAAC,SAAS,EAAE,KAAK,EAAC,GAAG;IACb,KAAK,OAAO,CAAC,KAAK,CAAC,OAAO;IACxC,QACK;AAET\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_component_1_2B8d0oH9ZWc",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "2B8d0oH9ZWc",
  "canonicalFilename": "test.tsx_Header_component_1_2B8d0oH9ZWc",
  "path": "",
  "extension": "tsx",
  "parent": "Header_component_J4uyIhaBNR4",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    107,
    292
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_J4uyIhaBNR4"), "Header_component_J4uyIhaBNR4"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,uBAAS,uHASnB\"}")
== DIAGNOSTICS ==

[]
