packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_build_server.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2619
expression: output
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/unisynth';
import { isServer, isBrowser } from '@khulnasoft.com/unisynth/build';
import { mongodb } from 'mondodb';
import { threejs } from 'threejs';

import L from 'leaflet';

export const functionThatNeedsWindow = () => {
  if (isBrowser) {
    console.log('l', L);
    console.log('hey');
    window.alert('hey');
  }
};

export const App = component$(() => {
    useMount$(() => {
        if (isServer) {
            console.log('server', mongodb());
        }
        if (isBrowser) {
            console.log('browser', new threejs());
        }
    });
    return (
        <Cmp>
            {isServer && <p>server</p>}
            {isBrowser && <p>server</p>}
        </Cmp>
    );
});

============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const functionThatNeedsWindow = ()=>{};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "s_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAQA,OAAO,MAAM,0BAA0B,KAMvC,EAAE;AAEF,OAAO,MAAM,oBAAM,qGAehB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT)==

import { mongodb } from "mondodb";
export const s_ckEPmXZlub0 = ()=>{
    useMount$(()=>{
        console.log('server', mongodb());
    });
    return <Cmp>
            {<p>server</p>}
            {false}
        </Cmp>;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";6BAgB8B;IAC1B,UAAU;QAEF,QAAQ,GAAG,CAAC,UAAU;IAK9B;IACA,QACK,IAAI;YACD,EAAc,EAAE,MAAM,EAAE,GAAG;YAC3B,OAA4B;QAChC,EAAE;AAEV\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    396,
    731
  ]
}
*/
== DIAGNOSTICS ==

[]
